--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -3,6 +3,7 @@ html{
 }
 body{
   text-align: center;
+  font-family: "Arial","Meiryo",sans-serif;
 }
 #basic h2{
   font-weight: bold;
@@ -12,23 +13,14 @@ body{
 }
 h1{
     font-family: "Josefin Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: bold;
-    font-style: normal;
     font-size: 2rem;
     letter-spacing: 1.2em;
     text-shadow: 3px 3px rgb(115, 115, 114);
     border-bottom: solid 3px rgb(115, 115, 114);
-}　
-h2{
-  font-family: "Arial","Meiryo",sans-serif;
 }
-p{
-  font-family: "Arial","Meiryo",sans-serif;
-}
-.text-pink{
+.pink{
   color: rgb(255,192,203);
 }
-.text-blue{
+.skyblue{
   color: skyblue;
 }
